--- a/src/index.css
+++ b/src/index.css
@@ -5,15 +5,15 @@
 }
 
 body {
-  background-color: #4c4c4c;
-  }
+  background-color: #4c4c4c;  
+}
 
 .container {
   max-width: 960px;
+  min-height: calc(100vh - 30px);
   }
 
-#myInput {
-  /* background-image: url("images/search.png"); */
+#myInput {  
   background-position: 10px 10px;
   background-repeat: no-repeat;
   width: 100%;
@@ -88,8 +88,7 @@ img.icon {
 
 .row_tooltip {
   position: relative;
-  display: block;
-  /* border-bottom: 1px dotted white; */
+  display: block;  
   text-align: center;
   margin-bottom: 15px;
 }
@@ -101,8 +100,7 @@ img.icon {
   text-align: left;
   border-radius: 6px;
   padding: 5px;
-  font-size: 13px;
-  /* Position the tooltip */
+  font-size: 13px;  
   position: absolute;
   z-index: 1;
   width: 200px;
@@ -140,7 +138,35 @@ button {
 
 div.form-feedback {
   height: 42px;  
-  background: green; 
+  background-color: #9cfcb7; 
+}
+
+div.form-feedback2 {
+  height: 45px;  
+  background-color: #4c4c4c;
+  margin-left: 30%;
+}
+
+div.separador {
+  height: 3px;
+  background-color: black;
+}
+
+
+p.form {
+  font-size: 20px;
+  margin-left: 10px; 
+}
+
+p.feed {
+  font-size: 20px;
+  margin-left: 15px;
+  color: white;  
+}
+
+div.likefooter {
+  width: 100%; 
+  height: 100%;  
 }
 
 @media (min-width: 600px) and (max-width: 900px) {
