Prototipo2 listo para S3

--- a/src/index.css
+++ b/src/index.css
@@ -4,38 +4,51 @@
   margin: 0;
 }
 
-.contact-container{
-  padding-top: 50px;
-  margin: 0 auto;
-}
-
 body {
-  background-color: #4c4c4c; 
+  background-color: #4c4c4c;
 }
 
 .container {
   max-width: 960px;
-  position: relative;  
-  }
+  position: relative;
+}
 
 #myInput {
-  max-width: 960px;  
+  max-width: 960px;
   background-position: 10px 10px;
   background-repeat: no-repeat;
   width: 97%;
   font-size: 16px;
-  box-sizing: border-box; 
+  box-sizing: border-box;
   padding: 12px 10px;
   border: 1px solid #ddd;
   border-radius: 30px;
   margin-bottom: 20px;
   color: black;
   position: fixed;
-  top:0;
+  top: 0;
   left: 0;
   right: 0;
   margin: 0 auto;
-  z-index: 1000; 
+  z-index: 1000;
+}
+
+.contact-container {
+  padding-top: 50px;
+  margin: 0 auto 100px;
+}
+
+.contact {
+  padding: 0;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  padding-bottom: 3px;
+  min-height: 300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-top: 30px;
+  overflow: hidden;
 }
 
 h3 {
@@ -61,7 +74,7 @@ li {
 }
 
 .row_skills li:not(:last-child)::after {
-  content: ", ";  
+  content: ", ";
 }
 
 .row {
@@ -73,12 +86,14 @@ img.icon {
   margin-right: 5px;
   margin-bottom: 5px;
   width: 80px;
+  height: 80px;
+  object-fit: cover;
   position: relative;
   left: 20px;
 }
 
 .col-4 {
-  padding: 0;  
+  padding: 0;
 }
 
 .rating {
@@ -93,16 +108,16 @@ img.icon {
 
 .map > a {
   color: white;
-  font-style: italic;  
+  font-style: italic;
 }
 
 .skills {
-  margin-top: 10px;  
+  margin-top: 10px;
 }
 
 .row_tooltip {
   position: relative;
-  display: block;  
+  display: block;
   text-align: center;
   margin-bottom: 15px;
   color: white;
@@ -115,13 +130,13 @@ img.icon {
   text-align: left;
   border-radius: 6px;
   padding: 5px;
-  font-size: 13px;  
+  font-size: 13px;
   position: absolute;
   z-index: 1;
   width: 200px;
   top: 100%;
   left: 50%;
-  margin-left: -100px;  
+  margin-left: -100px;
 }
 
 .row_tooltip:hover .tooltiptext {
@@ -144,56 +159,53 @@ img.icon {
   text-align: center;
 }
 
-.contact {
-  padding: 0;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  padding-bottom: 3px;
-  min-height: 300px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  margin-top: 30px;   
-}
-
-.footer{
-  background: white;
+.footer {
   margin-top: 0px;
   position: fixed;
   bottom: 0;
   left: 0;
   right: 0;
   margin: auto;
-  max-width: 960px;  
+  max-width: 960px;
   width: 97%;
+  height: 48px;
   padding: 1px;
-  display: flex;  
+  display: flex;
   align-items: center;
-  justify-content: space-around;  
+  justify-content: space-around;
 }
 
 .footer a {
   width: 50%;
+  height: 100%;
+  text-decoration: none;
 }
 
-.footer button{
+.footer button {
   border-radius: 8px;
   border: none;
   background: white;
   width: 100%;
-  color:black;
+  height: 100%;
+  color: black;
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 4px 0px;
   outline: none;
+  font-size: 15px;
 }
 
-.footer button:hover{
+.footer button:hover {
   box-shadow: 0 1px 3px 0 rgb(60 64 67 / 30%), 0 4px 8px 3px rgb(60 64 67 / 15%);
   z-index: 100;
   position: relative;
   outline: none;
+}
+
+.footer button img {
+  width: auto;
+  height: 20px;
 }
 
 @media (min-width: 600px) and (max-width: 900px) {
@@ -215,12 +227,12 @@ img.icon {
 }
 
 @media (max-width: 768px) {
-  .footer button{
+  .footer button {
     width: 100%;
     font-size: 12px;
   }
 
-  .footer button img{
+  .footer button img {
     height: 25px;
     width: auto;
   }
